use style height: 100vh instead of 100% to fix (too small) height on mobile

--- a/one-billion-pixels-website/src/style.css
+++ b/one-billion-pixels-website/src/style.css
@@ -48,8 +48,8 @@ body {
 
 #screen-frame {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     margin: auto;
     outline: 5px solid black;
     pointer-events: none;
